<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        >
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"

            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:paddingTop="0dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/boot_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/booth_no" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="phone"
                    android:hint="@string/village_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/home_no" />
            </android.support.design.widget.TextInputLayout>
            <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<EditText-->
            <!--android:id="@+id/home_no_voters"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="textEmailAddress"-->
            <!--android:hint="@string/home_no_voters" />-->
            <!--</android.support.design.widget.TextInputLayout>-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/head_of_family"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/head_of_family" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/home_no_voters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/home_no_voters" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/contact_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/contact_no" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_weight="1"
                    android:textSize="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Political Party"
                    android:textColor="#a2a1b8"
                    android:maxLength="12"
                    android:background="#0000"
                    android:padding="16dp"
                    android:gravity="left"
                    />

                <Spinner
                    android:layout_weight="1"
                    android:id="@+id/partyspinner"
                    android:textColorHint="#181737"
                    android:textColor="#181737"
                    android:padding="16dp"
                    android:gravity="right"
                    android:layout_width="match_parent"
                    style="@android:style/Widget.Spinner"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/vote_will_devide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/vote_will_devide" />
            </android.support.design.widget.TextInputLayout>
            <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<EditText-->
            <!--android:id="@+id/party_prefferred"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="textEmailAddress"-->
            <!--android:hint="@string/party_prefferred" />-->
            <!--</android.support.design.widget.TextInputLayout>-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/outside_working"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/outside_working" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/outside_worker_phone_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/outside_worker_phone_no" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/outside_worker_pin_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/outside_worker_pin_no" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_weight="1"
                    android:textSize="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cast"
                    android:textColor="#a2a1b8"
                    android:maxLength="12"
                    android:background="#0000"
                    android:padding="16dp"
                    android:gravity="left"
                    />

                <Spinner
                    android:layout_weight="1"
                    android:id="@+id/castspinner"
                    android:textColorHint="#181737"
                    android:textColor="#181737"
                    android:padding="16dp"
                    android:gravity="right"
                    android:layout_width="match_parent"
                    style="@android:style/Widget.Spinner"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/which_organisation_involved"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/which_organisation_involved" />
            </android.support.design.widget.TextInputLayout>
            <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--&lt;!&ndash;<EditText&ndash;&gt;-->
            <!--&lt;!&ndash;android:id="@+id/input_password"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;android:inputType="textMultiLine"&ndash;&gt;-->
            <!--&lt;!&ndash;android:hint="@string/hint_password" />&ndash;&gt;-->
            <!--<MultiAutoCompleteTextView-->
            <!--android:id="@+id/letertextview"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/connect_to_person" />-->
            <!--</android.support.design.widget.TextInputLayout>

        -->


            <Button android:id="@+id/btn_send"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_submit"
                android:background="@color/bittersweet2"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/white"/>


        </LinearLayout>
    </RelativeLayout>
</ScrollView>